--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,15 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/fluent-hc -->
+			<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5-fluent -->
+			<dependency>
+				<groupId>org.apache.httpcomponents.client5</groupId>
+				<artifactId>httpclient5-fluent</artifactId>
+				<version>5.4</version>
+			</dependency>
+
+
 		</dependencies>
 	</dependencyManagement>
 	<build>
