--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-client</artifactId>
+		</dependency>
+
 
 	</dependencies>
 	<dependencyManagement>
@@ -152,8 +157,10 @@
 			<dependency>
 				<groupId>org.apache.httpcomponents.client5</groupId>
 				<artifactId>httpclient5-fluent</artifactId>
-				<version>5.4</version>
+				<version>5.2</version>
 			</dependency>
+
+
 
 
 		</dependencies>
