--- a/pom.xml
+++ b/pom.xml
@@ -203,10 +203,14 @@
 	</dependencyManagement>
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+
 				<configuration>
+					<mainClass>org.sale.project.ProjectApplication</mainClass>
+
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -248,5 +252,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
