--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,18 @@
 # spring.application.name=project
 
+
+
 server:
   port: 8080
   servlet:
     context-path: /
 
 spring:
+  main:
+    class: org.sale.project.ProjectApplication
+
+
+
   datasource:
     url: "jdbc:mysql://localhost:3306/quanao"
     driverClassName: "com.mysql.cj.jdbc.Driver"
