--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,11 @@
 			<artifactId>gson</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.infobip</groupId>
+			<artifactId>infobip-api-java-client</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 
 
     </dependencies>
@@ -192,6 +197,7 @@
 				<artifactId>httpclient5-fluent</artifactId>
 				<version>5.2</version>
 			</dependency>
+
 
 
 
