--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ server:
 #image-port: ${image-port:http://localhost:8080/}
 
 name:
-  host: ${NAME_HOST:https://styloft.onrender.com/}
+  host: ${NAME_HOST:http://localhost:8080/}
 
 spring:
   main:
@@ -21,14 +21,7 @@ spring:
     driverClassName: "com.mysql.cj.jdbc.Driver"
     password: root
     username: root
-#    url: "jdbc:mysql://${DATABASE_HOST:styloft-dungcnttk2021-b473.b.aivencloud.com}:${DATABASE_PORT:21820}/${DATABASE_NAME:quanao}"
-#    driverClassName: "com.mysql.cj.jdbc.Driver"
-#    password: ${DATABASE_PASSWORD:AVNS_f88wXBbHtkNj5T49Km8}
-#    username: ${DATABASE_USER:avnadmin}
-#    url: "jdbc:mysql://${DATABASE_HOST:styloft-dungcnttk2021-b473.b.aivencloud.com}:${DATABASE_PORT:21820}/${DATABASE_NAME:styloft}"
-#    driverClassName: "com.mysql.cj.jdbc.Driver"
-#    password: ${DATABASE_PASSWORD:AVNS_f88wXBbHtkNj5T49Km8}
-#    username: ${DATABASE_USER:avnadmin}
+
 
   jpa:
     hibernate:
@@ -38,7 +31,6 @@ spring:
   session:
     store-type: jdbc
     timeout: 30m
-
     jdbc:
       initialize-schema: always
 
@@ -49,7 +41,7 @@ spring:
           google:
             client-id: 264565889451-li40qm8elg7569blr27vkuvb23qbmqe1.apps.googleusercontent.com
             client-secret: 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
-            redirect-uri: "${NAME_HOST:https://styloft.onrender.com/}login/oauth2/code/google"
+            redirect-uri: "${NAME_HOST:http://localhost:8080/}login/oauth2/code/google"
             scope:
               - email
               - profile
@@ -89,7 +81,7 @@ payment:
     url: https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
     tmnCode: 5RIH2KL9
     secretKey: FPHVDV0OM6XV4K6A5646H7UX599AQV9F
-    returnUrl: https://styloft.onrender.com/pay/vn-pay-callback
+    returnUrl: http://localhost:8080/pay/vn-pay-callback
     version: 2.1.0
     command: pay
     orderType: other
